[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bunny"
version = "1.0"
description = "A family of lightweight multimodal models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    'accelerate', 'apex', 'bitsandbytes', 'deepspeed', 'einops', 'einops-exts',
    'fastapi', 'gradio', 'httpx', 'markdown2', 'numpy', 'openpyxl',
    'peft', 'protobuf', 'pydantic', 'pypandoc', 'requests', 'scikit-learn', 'sentencepiece', 'shortuuid',
    'timm', 'tiktoken', 'tokenizers', 'torchvision', 'transformers', 'uvicorn', 'xformers'
]


[project.urls]
"Homepage" = "https://github.com/BAAI-DCAI/Bunny"
"Discussion" = "https://github.com/BAAI-DCAI/Bunny/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
